2006-11-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/stat_test.ref, tests/histogram_test.cpp,
	tests/stat_test.cpp, tests/histogram_test.ref, tests/Makefile.am,
	itpp/itstat.h, itpp/base/stat.h, itpp/stat/histogram.h,
	itpp/stat/sources.mk: Histogram class moved to the statistics
	module.

2006-11-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, doc/tutorial/mog.doc, doc/tutorial/src/sources.mk,
	doc/tutorial/src/mog.cpp, doc/tutorial/sources.mk,
	doc/tutorial/tutorial.doc, doc/doxygen_html.cfg.in,
	doc/Makefile.am, itpp/sources.mk, itpp/itstat.h, itpp/Makefile.am,
	itpp/stat, itpp/stat/mog_generic.cpp, itpp/stat/mog_generic.h,
	itpp/stat/mog_diag_kmeans.cpp, itpp/stat/mog_diag.cpp,
	itpp/stat/mog_diag_em.cpp, itpp/stat/Makefile.am,
	itpp/stat/sources.mk, itpp/stat/mog_diag_kmeans.h,
	itpp/stat/mog_diag.h, itpp/stat/mog_diag_em.h: Created a new
	"Statistics" module, which contains an initial set of Mixture of
	Gaussians (MOG) classes written by Conrad Sanderson.

2006-11-26  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/modulator_nd.*: Minor code readability and
	efficiency improvements
	
2006-11-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/srccode/gmm.h: Fixed bug [1570388] by adding a warning
	message to `get_no_mixtures()' function saying that it is
	deprecated and that `get_no_gaussians()' should be used instead
	(merged rev. 713:714 from itpp-3-10 branch).

2006-11-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/rec_syst_conv_code.cpp: To avoid code duplication, the
	local `com_logmap()' function replaced with its safer
	implementation `log_add()' from "itpp/base/logexpfunc.h". Thanks
	to Erik G. Larsson for pointing this out.

2006-11-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, configure.ac, doc/local/authors.doc,
	itpp/base/logexpfunc.h, itpp/config_msvc.h: New `log_add()'
	function implemented, which calculates safely the following