@@ -1,5 +1,17 @@
 2006-11-30  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/itfixed.h, itpp/fixed/cfix.h, itpp/fixed/fixed.h,
+	itpp/fixed/cfixed.h, itpp/fixed/fix_factory.h,
+	itpp/fixed/fix_functions.h, itpp/fixed/fix_base.h,
+	itpp/fixed/fix_operators.h, itpp/fixed/fix.h,
+	itpp/protocol/packet_channel.h, itpp/protocol/events.h,
+	itpp/protocol/packet.h, itpp/protocol/tcp_client_server.h,
+	itpp/protocol/packet_generator.h,
+	itpp/protocol/front_drop_queue.h,
+	itpp/protocol/selective_repeat.h, itpp/protocol/signals_slots.h,
+	itpp/protocol/tcp.h: Fixed and improved Doxygen documentation
+	grouping.
+
 	* tests/stat_test.ref, tests/histogram_test.cpp,
 	tests/stat_test.cpp, tests/histogram_test.ref, tests/Makefile.am,
 	itpp/itstat.h, itpp/base/stat.h, itpp/stat/histogram.h,
